fix difficulty clicking back button due to z-index of side menu
this doesn't seem to be required

--- a/services/core-web/src/styles/components/NoticeOfWork.scss
+++ b/services/core-web/src/styles/components/NoticeOfWork.scss
@@ -130,7 +130,6 @@
     top: 134px;
     position: fixed;
     width: 240px;
-    z-index: 50;
 
     @include tablet {
       display: none;
